# robovmx

./: README.md  build.sh  pom.xml  setversion.sh
compiler/rt/android/: .gitignore  CMakeLists.txt
compiler/rt/android/art/openjdkjvm/: OpenjdkJvm.cc
compiler/rt/android/cmake/art/: CMakeLists.txt
compiler/rt/android/cmake/boringssl/: CMakeLists.txt
compiler/rt/android/cmake/conscrypt/: CMakeLists.txt  generate_constants.sh
compiler/rt/android/cmake/expat/: CMakeLists.txt
compiler/rt/android/cmake/fdlibm/: CMakeLists.txt
compiler/rt/android/cmake/icu/: CMakeLists.txt
compiler/rt/android/cmake/javasqlite/: CMakeLists.txt
compiler/rt/android/cmake/libbase/: CMakeLists.txt
compiler/rt/android/cmake/libcore/: CMakeLists.txt  generate_constants.sh
compiler/rt/android/cmake/libnativehelper/: CMakeLists.txt
compiler/rt/android/cmake/sqlite/: CMakeLists.txt
compiler/rt/android/cmake/zlib/: CMakeLists.txt
compiler/rt/android/conscrypt/common/src/jni/main/cpp/conscrypt/: jniload.cc  native_crypto.cc
compiler/rt/android/libcore.additional/: readme.md
compiler/rt/android/libcore.additional/src/main/java/com/android/org/conscrypt/: ConscryptForceLinkClasses.java
compiler/rt/android/libcore.additional/src/main/native/: EPoll-mock.c  EPollPort-mock.c  KQueue-mock.c  KQueueArrayWrapper-mock.c  KQueuePort-mock.c  LinuxNativeDispatcher-mock.c  LinuxWatchService-mock.c
compiler/rt/android/libcore.luni4/: readme.md
compiler/rt/android/libcore.luni4/src/main/java/java/net/: NetworkInterface.java
compiler/rt/android/libcore.luni4/src/main/native/: android_icu_impl_ICUBinary.cpp  icudt68l.dat.gz.h
compiler/rt/android/libcore/dalvik/src/main/java/dalvik/annotation/: MethodParameters.java
compiler/rt/android/libcore/dalvik/src/main/java/dalvik/bytecode/: OpcodeInfo.java  Opcodes.java
compiler/rt/android/libcore/dalvik/src/main/java/dalvik/system/: AllocationLimitError.java  AppSpecializationHooks.java  BaseDexClassLoader.java  DelegateLastClassLoader.java  DexClassLoader.java  DexFile.java  DexPathList.java  EmulatedStackFrame.java  InMemoryDexClassLoader.java  NativeStart.java  PathClassLoader.java  PotentialDeadlockError.java  RuntimeHooks.java  TemporaryDirectory.java  VMDebug.java  ZygoteHooks.java
compiler/rt/android/libcore/libart/src/main/java/dalvik/system/: AnnotatedStackTraceElement.java  ClassExt.java  VMRuntime.java  VMStack.java
compiler/rt/android/libcore/libart/src/main/java/java/lang/: Daemons.java  DexCache.java  StringFactory.java  VMClassLoader.java
compiler/rt/android/libcore/luni/src/main/java/android/system/: IcmpHeaders.java  OsConstants.java  UnixSocketAddress.java
compiler/rt/android/libcore/luni/src/main/java/java/nio/: NioUtils.java
compiler/rt/android/libcore/luni/src/main/java/libcore/internal/: Java9LanguageFeatures.java
compiler/rt/android/libcore/luni/src/main/java/libcore/io/: AsynchronousCloseMonitor.java  BlockGuardOs.java  IoBridge.java  IoUtils.java  Linux.java  MemoryMappedFile.java
compiler/rt/android/libcore/luni/src/main/java/libcore/net/: InetAddressUtils.java
compiler/rt/android/libcore/luni/src/main/java/libcore/util/: CharsetUtils.java
compiler/rt/android/libcore/luni/src/main/native/: IcuUtilities.cpp  IcuUtilities.h  JniConstants.cpp  JniConstants.h  Portability.h  Register.cpp  android_system_OsConstants.cpp  libcore_icu_ICU.cpp  libcore_io_AsynchronousCloseMonitor.cpp  libcore_io_Linux.cpp  libcore_io_Memory.cpp  libcore_math_NativeBN.cpp  libcore_util_NativeAllocationRegistry.cpp  org_apache_harmony_xml_ExpatParser.cpp  sun_misc_Unsafe.cpp
compiler/rt/android/libcore/ojluni/src/main/java/java/io/: FileDescriptor.java  FileInputStream.java  FileOutputStream.java  ObjectStreamClass.java  RandomAccessFile.java  UnixFileSystem.java
compiler/rt/android/libcore/ojluni/src/main/java/java/lang/: Class.java  ClassLoader.java  Enum.java  InheritableThreadLocal.java  Object.java  Package.java  Runtime.java  String.java  System.java  Thread.java  ThreadGroup.java  ThreadLocal.java  Throwable.java
compiler/rt/android/libcore/ojluni/src/main/java/java/lang/ref/: Reference.java
compiler/rt/android/libcore/ojluni/src/main/java/java/net/: Inet4Address.java  Inet6Address.java  Inet6AddressImpl.java  InetAddress.java  NetworkInterface.java  PlainDatagramSocketImpl.java  PlainSocketImpl.java  ProxySelector.java  SocketInputStream.java  SocketOutputStream.java  URL.java
compiler/rt/android/libcore/ojluni/src/main/java/java/nio/: ByteBuffer.java  CharBuffer.java  DoubleBuffer.java  FloatBuffer.java  IntBuffer.java  LongBuffer.java  ShortBuffer.java
compiler/rt/android/libcore/ojluni/src/main/java/java/util/: Comparator.java  EnumMap.java  EnumSet.java  Map.java  TimeZone.java  TreeMap.java
compiler/rt/android/libcore/ojluni/src/main/java/sun/misc/: Unsafe.java  Version.java
compiler/rt/android/libcore/ojluni/src/main/native/: Adler32.c  CRC32.c  Character.cpp  Console_md.c  DatagramChannelImpl.c  DatagramDispatcher.c  Deflater.c  Double.c  FileChannelImpl.c  FileDescriptor_md.c  FileDispatcherImpl.c  FileInputStream.c  FileKey.c  FileSystemPreferences.c  Float.c  IOUtil.c  Inet4Address.c  Inet6Address.c  InetAddress.c  Inflater.c  JniConstants.cpp  JniConstants.h  MappedByteBuffer.c  Math.c  NativeThread.c  Net.c  ObjectInputStream.c  ObjectOutputStream.c  ObjectStreamClass.c  OnLoad.cpp  ProcessEnvironment_md.c  Runtime.c  ServerSocketChannelImpl.c  SocketChannelImpl.c  SocketInputStream.c  SocketOutputStream.c  StrictMath.c  System.c  UNIXProcess_md.c  UnixFileSystem_md.c  (+8 more)
compiler/rt/android/libnativehelper/include/nativehelper/: JNIHelp.h
compiler/rt/robovm/: CMakeLists.txt
compiler/rt/robovm/src/main/java/java/lang/: Class.java  Daemons.java  Thread.java
compiler/rt/robovm/src/main/java/java/lang/reflect/: Constructor.java  Method.java
compiler/rt/robovm/src/main/java/org/robovm/rt/annotation/: ForceLinkClass.java  ForceLinkClasses.java
compiler/rt/robovm/src/main/java/sun/misc/: Unsafe.java
compiler/rt/robovm/src/main/native/: java_lang_Runtime.c  java_lang_reflect_Constructor.c  rt.c
(+186 files in other folders)
